--- a/sim/CNR_GR04_DIFF-AMP_PK/bode.yaml
+++ b/sim/CNR_GR04_DIFF-AMP_PK/bode.yaml
@@ -1,10 +1,16 @@
-#<name>:
-#  src:
-#    - <paramters>
-#  typ: <typical spec value>
-#  name: <long name>
-#  min: <minimum spec value>
-#  max: <maximum spec value>
-#  scale: <scale, multiply result by scale>
-#  digits: <significant digits>
-#  unit: Unit
+gain_dc:
+  src:
+    - gain_dc_-40
+    - gain_dc_-20
+    - gain_dc_0
+    - gain_dc_20
+    - gain_dc_40
+    - gain_dc_80
+    - gain_dc_125
+  typ: 50
+  name: Output gain
+  min: 45
+  max: 55
+  scale: 1
+  digits: 3
+  unit: V/V
