--- a/sim/CNR_GR04_DIFF-AMP_PK/tran.yaml
+++ b/sim/CNR_GR04_DIFF-AMP_PK/tran.yaml
@@ -1,10 +1,10 @@
-#<name>:
-#  src:
-#    - <paramters>
-#  typ: <typical spec value>
-#  name: <long name>
-#  min: <minimum spec value>
-#  max: <maximum spec value>
-#  scale: <scale, multiply result by scale>
-#  digits: <significant digits>
-#  unit: Unit
+out:
+  src:
+    - gain_10hz
+  typ: 50
+  name: Output gain
+  min: 45
+  max: 55
+  scale: 1
+  digits: 3
+  unit: V/V
